# bahamut-week-ani

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: main.rs  util.rs
src/ui/: day.rs  mod.rs  week.rs
