[package]
name = "bplt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.2.2"
crossterm = "0.26.1"
ratatui = "0.20.1"
reqwest = "0.11.16"
scraper = "0.16.0"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*